2003-07-29 Jackson Harper <jackson@latitudegeo.com>

	* IInstr.cs: Instructions now get their parent method when being 
	emitted.
	* *Instr.cs: Adjust emit method to accept a methoddef
	
2003-07-27 Jackson Harper <jackson@latitudegeo.com>

	* CodeGen.cs: Set the assembly name when creating the PEFile. 

2003-07-27 Jackson Harper <jackson@latitudegeo.com>

	* CodeGen.cs: Do not create the PEFile untill the resolve phase. This 
	fixes the problem with ilasm creating blank files if their is a 
	failure in the parsing phase and not being able to set the assembly
	name.
	* ExternTable.cs: Do not reference the assemblies untill after the 
	PEFile untill the Resolve phase.
	
2003-07-27 Jackson Harper <jackson@latitudegeo.com>

	* ExternFieldRef.cs: Resolve as a typespec field if neccasary, make 
	sure to not resolve more then once.
	* ExternMethodRef.cs: Resolve as a typespec method if neccasary
	* ExternTypeRef.cs: Use modifiable type as base class
	* FieldRef.cs: Make sure to not resolve more then once.
	* GlobalFieldRef.cs: Make sure to not resolve more then once.
	* GlobalMethodRef.cs: Make sure to not resolve more then once.
	* ITypeRef.cs: Types no longer need the AsClassRef method
	* MethodDef.cs: Only decriment param count for vararg methods if there
	is an ellipsis on the end of the param list. 
	Fix little bug so return types allways get resolved.
	* PeapiTypeRef.cs: Use TypeRef.Ellipsis for a place holder in bound
	arrays instead of null
	* PrimitiveTypeRef.cs: Use modifiable type as a base
	* TypeRef.cs: Use modifable type as base, and let it do all the
	modifications
	* TypeSpecFieldRef.cs: Make sure to not resolve more then once.
	* ModifiableType.cs: New base class for all types. This class will
	handle all of the typemodification and determine whether methods
	should be added to the type or the types typespec.
	
2003-07-25 Jackson Harper <jackson@latitudegeo.com>

	* MethodDef.cs: If methods do not have the static attribute give