@@ -15,22 +15,13 @@ namespace Mono.ILASM {
 
         public class TryBlock : IInstr {
 
-                private string from_label;
-                private string to_label;
+                private HandlerBlock block;
                 private ArrayList clause_list;
 
-                public TryBlock (string from_label, string to_label)
+                public TryBlock (HandlerBlock block)
                 {
-                        this.from_label = from_label;
-                        this.to_label = to_label;
-
-                        clause_list = new ArrayList ();
-                }
-
-                public TryBlock (HandlerBlock block) :
-                        this (block.from_label, block.to_label)
-                {
-
+			this.block = block;
+			clause_list = new ArrayList ();
                 }
 
                 public void AddSehClause (ISehClause clause)
@@ -41,13 +32,13 @@ namespace Mono.ILASM {
                 public void Emit (CodeGen code_gen, MethodDef meth,
 				  PEAPI.CILInstructions cil)
                 {
-                        PEAPI.CILLabel from = meth.GetLabelDef (from_label);
-                        PEAPI.CILLabel to = meth.GetLabelDef (to_label);
+                        PEAPI.CILLabel from = block.GetFromLabel (code_gen, meth);
+                        PEAPI.CILLabel to = block.GetToLabel (code_gen, meth);
                         PEAPI.TryBlock try_block = new PEAPI.TryBlock (from, to);
 
                         foreach (ISehClause clause in clause_list)
                                 try_block.AddHandler (clause.Resolve (code_gen, meth));
-
+			
                         cil.AddTryBlock (try_block);
                 }
 
